--- a/Angular/Orenda-Ecommerce/src/app/layouts/layouts.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/layouts/layouts.component.html
@@ -1,7 +1,47 @@
-<app-header [defaltLink]="currenPage" (checkedChangePage)="currenPage = $event"></app-header>
-<app-sidebar style="margin-top: 500px;"></app-sidebar>
-<main>
-    <app-dashboard *ngIf="currenPage === 'dashboard'"></app-dashboard>
-    <app-product-page *ngIf="currenPage === 'product'"></app-product-page>
-</main>
-<app-footer></app-footer>
+<!-- <div class="container-scroller">
+  <app-header
+    [defaltLink]="currenPage"
+    (checkedChangePage)="currenPage = $event"
+  ></app-header>
+</div> -->
+<div class="container-scroller">
+  <app-header></app-header>
+  <div class="container-fluid page-body-wrapper">
+    <div class="theme-setting-wrapper">
+      <div id="settings-trigger"><i class="ti-settings"></i></div>
+      <div id="theme-settings" class="settings-panel">
+        <i class="settings-close ti-close"></i>
+        <p class="settings-heading">SIDEBAR SKINS</p>
+        <div class="sidebar-bg-options selected" id="sidebar-light-theme">
+          <div class="img-ss rounded-circle bg-light border mr-3"></div>
+          Light
+        </div>
+        <div class="sidebar-bg-options" id="sidebar-dark-theme">
+          <div class="img-ss rounded-circle bg-dark border mr-3"></div>
+          Dark
+        </div>
+        <p class="settings-heading mt-2">HEADER SKINS</p>
+        <div class="color-tiles mx-0 px-4">
+          <div class="tiles success"></div>
+          <div class="tiles warning"></div>
+          <div class="tiles danger"></div>
+          <div class="tiles info"></div>
+          <div class="tiles dark"></div>
+          <div class="tiles default"></div>
+        </div>
+      </div>
+    </div>
+    <app-sidebar
+      [defaltLink]="currenPage"
+      (checkedChangePage)="currenPage = $event"
+      class="sidebar"
+    ></app-sidebar>
+    <div class="main-panel">
+      <div class="content-wrapper">
+        <app-dashboard *ngIf="currenPage === 'dashboard'"></app-dashboard>
+        <app-product-page *ngIf="currenPage === 'product'"></app-product-page>
+      </div>
+      <app-footer></app-footer>
+    </div>
+  </div>
+</div>
