--- a/Angular/Orenda-Ecommerce/src/app/layouts/header/header.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/layouts/header/header.component.html
@@ -1,12 +1,12 @@
-<!-- <header>
+<header>
     <h1>Website Header</h1>
     <nav>
         <button (click)="switchPage('dashboard')" [class.active]="defaltLink === 'dashboard'">Dashboard</button>
         <button (click)="switchPage('product')" [class.active]="defaltLink === 'product'">Product</button>
         <button (click)="switchPage('contact')" [class.active]="defaltLink === 'contact'">Contact</button>
     </nav>
-</header> -->
-<nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+</header>
+<!-- <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
     <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
         <a class="navbar-brand brand-logo mr-5" href="index.html"><img src="../../../assets/themes/images/logo.svg"
                 class="mr-2" alt="logo" /></a>
@@ -107,4 +107,4 @@
             <span class="icon-menu"></span>
         </button>
     </div>
-</nav>
+</nav> -->
