--- a/Angular/Orenda-Ecommerce/src/app/layouts/layouts.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/layouts/layouts.component.html
@@ -1,9 +1,3 @@
-<!-- <div class="container-scroller">
-  <app-header
-    [defaltLink]="currenPage"
-    (checkedChangePage)="currenPage = $event"
-  ></app-header>
-</div> -->
 <div class="container-scroller">
     <app-header></app-header>
     <div class="container-fluid page-body-wrapper">
@@ -31,7 +25,8 @@
                 </div>
             </div>
         </div>
-        <app-sidebar [defaltLink]="currenPage" (checkedChangePage)="currenPage = $event" class="sidebar"></app-sidebar>
+        <app-sidebar [defaltLink]="currenPage" (checkedChangePage)="currenPage = $event"
+            class="sidebar sidebar-offcanvas" id="sidebar"></app-sidebar>
         <div class="main-panel">
             <div class="content-wrapper">
                 <app-dashboard *ngIf="currenPage === 'dashboard'"></app-dashboard>
