--- a/Angular/Orenda-Ecommerce/src/app/layouts/sidebar/sidebar.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/layouts/sidebar/sidebar.component.html
@@ -1,12 +1,8 @@
-<nav class="sidebar-offcanvas" id="sidebar">
+<nav>
   <ul class="nav">
     <li class="nav-item">
-      <a
-        (click)="switchPage('dashboard')"
-        [class.active]="defaltLink === 'dashboard'"
-        class="nav-link"
-        href="#"
-      >
+      <a (click)="switchPage('dashboard')" [class.active]="defaltLink === 'dashboard'" class="nav-link"
+        data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
         <i class="icon-grid menu-icon"></i>
         <span class="menu-title">Dashboard</span>
       </a>
@@ -176,12 +172,7 @@
       </div>
     </li> -->
     <li class="nav-item">
-      <a
-        (click)="switchPage('product')"
-        [class.active]="defaltLink === 'product'"
-        class="nav-link"
-        href="#"
-      >
+      <a (click)="switchPage('product')" [class.active]="defaltLink === 'product'" class="nav-link">
         <i class="icon-paper menu-icon"></i>
         <span class="menu-title">Product-page</span>
       </a>
