--- a/Angular/Orenda-Ecommerce/src/app/layouts/sidebar/sidebar.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/layouts/sidebar/sidebar.component.html
@@ -1,20 +1,14 @@
 <nav>
   <ul class="nav">
     <li class="nav-item">
-      <a (click)="switchPage('dashboard')" [class.active]="defaltLink === 'dashboard'" class="nav-link"
-        data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
+      <a href="javascript:void(0)" (click)="switchPage('dashboard')" [class.active]="defaltLink === 'dashboard'"
+        class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
         <i class="icon-grid menu-icon"></i>
         <span class="menu-title">Dashboard</span>
       </a>
     </li>
     <!-- <li class="nav-item">
-      <a
-        class="nav-link"
-        data-toggle="collapse"
-        href="#ui-basic"
-        aria-expanded="false"
-        aria-controls="ui-basic"
-      >
+      <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
         <i class="icon-layout menu-icon"></i>
         <span class="menu-title">UI Elements</span>
         <i class="menu-arrow"></i>
@@ -22,31 +16,20 @@
       <div class="collapse" id="ui-basic">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item">
-            <a class="nav-link" href="pages/ui-features/buttons.html"
-              >Buttons</a
-            >
+            <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/ui-features/dropdowns.html"
-              >Dropdowns</a
-            >
+            <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/ui-features/typography.html"
-              >Typography</a
-            >
+            <a class="nav-link" href="pages/ui-features/typography.html">Typography</a>
           </li>
         </ul>
       </div>
     </li>
     <li class="nav-item">
-      <a
-        class="nav-link"
-        data-toggle="collapse"
-        href="#form-elements"
-        aria-expanded="false"
-        aria-controls="form-elements"
-      >
+      <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false"
+        aria-controls="form-elements">
         <i class="icon-columns menu-icon"></i>
         <span class="menu-title">Form elements</span>
         <i class="menu-arrow"></i>
@@ -54,21 +37,13 @@
       <div class="collapse" id="form-elements">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item">
-            <a class="nav-link" href="pages/forms/basic_elements.html"
-              >Basic Elements</a
-            >
+            <a class="nav-link" href="pages/forms/basic_elements.html">Basic Elements</a>
           </li>
         </ul>
       </div>
     </li>
     <li class="nav-item">
-      <a
-        class="nav-link"
-        data-toggle="collapse"
-        href="#charts"
-        aria-expanded="false"
-        aria-controls="charts"
-      >
+      <a class="nav-link" data-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
         <i class="icon-bar-graph menu-icon"></i>
         <span class="menu-title">Charts</span>
         <i class="menu-arrow"></i>
@@ -82,13 +57,7 @@
       </div>
     </li>
     <li class="nav-item">
-      <a
-        class="nav-link"
-        data-toggle="collapse"
-        href="#tables"
-        aria-expanded="false"
-        aria-controls="tables"
-      >
+      <a class="nav-link" data-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
         <i class="icon-grid-2 menu-icon"></i>
         <span class="menu-title">Tables</span>
         <i class="menu-arrow"></i>
@@ -96,21 +65,13 @@
       <div class="collapse" id="tables">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item">
-            <a class="nav-link" href="pages/tables/basic-table.html"
-              >Basic table</a
-            >
+            <a class="nav-link" href="pages/tables/basic-table.html">Basic table</a>
           </li>
         </ul>
       </div>
     </li>
     <li class="nav-item">
-      <a
-        class="nav-link"
-        data-toggle="collapse"
-        href="#icons"
-        aria-expanded="false"
-        aria-controls="icons"
-      >
+      <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
         <i class="icon-contract menu-icon"></i>
         <span class="menu-title">Icons</span>
         <i class="menu-arrow"></i>
@@ -124,13 +85,7 @@
       </div>
     </li>
     <li class="nav-item">
-      <a
-        class="nav-link"
-        data-toggle="collapse"
-        href="#auth"
-        aria-expanded="false"
-        aria-controls="auth"
-      >
+      <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
         <i class="icon-head menu-icon"></i>
         <span class="menu-title">User Pages</span>
         <i class="menu-arrow"></i>
@@ -149,13 +104,7 @@
       </div>
     </li>
     <li class="nav-item">
-      <a
-        class="nav-link"
-        data-toggle="collapse"
-        href="#error"
-        aria-expanded="false"
-        aria-controls="error"
-      >
+      <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
         <i class="icon-ban menu-icon"></i>
         <span class="menu-title">Error pages</span>
         <i class="menu-arrow"></i>
@@ -172,7 +121,8 @@
       </div>
     </li> -->
     <li class="nav-item">
-      <a (click)="switchPage('product')" [class.active]="defaltLink === 'product'" class="nav-link">
+      <a href="javascript:void(0)" (click)="switchPage('product')" [class.active]="defaltLink === 'product'"
+        class="nav-link">
         <i class="icon-paper menu-icon"></i>
         <span class="menu-title">Product-page</span>
       </a>
