--- a/Angular/Orenda-Ecommerce/src/app/layouts/layouts.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/layouts/layouts.component.html
@@ -1,16 +1,23 @@
-<app-login></app-login>
+<app-login
+  *ngIf="!isLoginSucces"
+  (isSucces)="isLoginSucces = $event"
+></app-login>
 <div *ngIf="isLoginSucces" class="container-scroller">
-    <app-header></app-header>
-    <div class="container-fluid page-body-wrapper">
-        <app-sidebar-skins></app-sidebar-skins>
-        <app-sidebar [currenPage]="currenPage" (checkedChangePage)="currenPage = $event"
-            class="sidebar sidebar-offcanvas" id="sidebar"></app-sidebar>
-        <div class="main-panel">
-            <div class="content-wrapper">
-                <app-dashboard *ngIf="currenPage === 'dashboard'"></app-dashboard>
-                <app-product-page *ngIf="currenPage === 'product'"></app-product-page>
-            </div>
-            <app-footer></app-footer>
-        </div>
+  <app-header></app-header>
+  <div class="container-fluid page-body-wrapper">
+    <app-sidebar-skins></app-sidebar-skins>
+    <app-sidebar
+      [currenPage]="currenPage"
+      (checkedChangePage)="currenPage = $event"
+      class="sidebar sidebar-offcanvas"
+      id="sidebar"
+    ></app-sidebar>
+    <div class="main-panel">
+      <div class="content-wrapper">
+        <app-dashboard *ngIf="currenPage === 'dashboard'"></app-dashboard>
+        <app-product-page *ngIf="currenPage === 'product'"></app-product-page>
+      </div>
+      <app-footer></app-footer>
     </div>
+  </div>
 </div>
