--- a/Angular/Orenda-Ecommerce/src/app/pages/login/login.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/pages/login/login.component.html
@@ -1,15 +1,35 @@
-<div class="login-container">
-    <h2>Login</h2>
-    <div>
+<div class="container-login">
+  <div class="card">
+    <div class="card-body">
+      <h2 class="card-title">Login form</h2>
+      <p class="card-description text-danger" *ngIf="errorMessage">
+        {{ errorMessage }}
+      </p>
+      <div class="forms-sample">
         <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" id="username" [(ngModel)]="username" name="username" class="form-control" />
+          <label for="exampleInputName1">Username</label>
+          <input
+            type="text"
+            id="username"
+            [(ngModel)]="username"
+            name="username"
+            class="form-control"
+          />
         </div>
         <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" [(ngModel)]="password" name="password" class="form-control" />
+          <label for="exampleInputEmail3">Password</label>
+          <input
+            type="password"
+            id="password"
+            [(ngModel)]="password"
+            name="password"
+            class="form-control"
+          />
         </div>
-        <button (click)="submitlogin()" type="submit" class="btn btn-primary">Login</button>
-        <p class="text-danger" *ngIf="errorMessage">{{ errorMessage }}</p>
+        <button (click)="submitlogin()" type="" class="btn btn-primary mr-2">
+          Submit
+        </button>
+      </div>
     </div>
+  </div>
 </div>
