--- a/Angular/Orenda-Ecommerce/src/app/pages/product-page/product-page.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/pages/product-page/product-page.component.html
@@ -1,88 +1,119 @@
 <div class="row">
-    <div class="col-lg-8">
-        <div class="card">
-            <div class="card-body">
-                <div style="display: flex;justify-content: space-between;" class="w-100">
-                    <h4 class="card-title">Table Product</h4>
-                    <button type="button" (click)="addProduct()" class="btn btn-inverse-primary btn-fw">Add
-                        Product</button>
-                </div>
-                <p class="card-description">
-                    Danh sách sản phẩm
-                </p>
-                <div class="table-responsive">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Product Name</th>
-                                <th>Unit Sold</th>
-                                <th>Stock</th>
-                                <th>Expiry Date</th>
-                                <th>Product type</th>
-                                <!-- <th>Status</th> -->
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let p of products; let i = index">
-                                <td>{{p.productName}}</td>
-                                <td>{{p.unitSold}}</td>
-                                <td>{{p.productStock}}</td>
-                                <td><label class="badge badge-info">{{getFormattedExpiryDate(p.expiryDate)}}</label>
-                                </td>
-                                <td>{{getCategoryName(p.categoryId)}}</td>
-                                <!-- <td><label class="badge badge-success">Active</label></td> -->
-                                <td>
-                                    <button (click)="updateProduct(p.productId)" type="button"
-                                        class="btn btn-primary btn-icon-text">
-                                        <i class="ti-file btn-icon-prepend"></i>
-                                        Edit
-                                    </button>
-                                    <button (click)="deleteProduct(p.productId)" style="margin-left: 10px;"
-                                        type="button" class="btn btn-outline-primary btn-icon-text">
-                                        Delete
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+  <div class="col-lg-8">
+    <div class="card">
+      <div class="card-body">
+        <div
+          style="display: flex; justify-content: space-between"
+          class="w-100"
+        >
+          <h4 class="card-title">Table Product</h4>
+          <button
+            type="button"
+            (click)="addProduct()"
+            class="btn btn-inverse-primary btn-fw"
+          >
+            Add Product
+          </button>
         </div>
-    </div>
-    <div class="mt-3 mt-lg-0 col-lg-4">
-        <div class="card">
-            <div class="card-body">
-                <div style="display: flex;justify-content: space-between;" class="w-100">
-                    <h4 class="card-title">Table Category</h4>
-                    <button type="button" class="btn btn-inverse-primary btn-fw">Add
-                        Category</button>
-                </div>
-                <p class="card-description">
-                    DbClick category để lọc sản phẩm
-                </p>
-                <div class="table-responsive">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Category Name</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr class="tr-category" [ngClass]="isActiveCatogory ? 'active' : ''"
-                                *ngFor="let c of categories; let i = index" (dblclick)="selectedCategory(c.categoryId)">
-                                <td>{{c.categoryName}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <button style="margin-top: 10px;" (click)="clearSelectedCategory()" type="button"
-                    class="btn btn-inverse-primary btn-fw">Delete
-                    Selected</button>
-            </div>
+        <p class="card-description">Danh sách sản phẩm</p>
+        <div class="table-responsive">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>Product Name</th>
+                <th>Unit Sold</th>
+                <th>Stock</th>
+                <th>Expiry Date</th>
+                <th>Product type</th>
+                <!-- <th>Status</th> -->
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let p of products; let i = index">
+                <td>{{ p.productName }}</td>
+                <td>{{ p.unitSold }}</td>
+                <td>{{ p.productStock }}</td>
+                <td>
+                  <label class="badge badge-info">{{
+                    getFormattedExpiryDate(p.expiryDate)
+                  }}</label>
+                </td>
+                <td>{{ getCategoryName(p.categoryId) }}</td>
+                <!-- <td><label class="badge badge-success">Active</label></td> -->
+                <td>
+                  <button
+                    (click)="updateProduct(p.productId)"
+                    type="button"
+                    class="btn btn-primary btn-icon-text"
+                  >
+                    <i class="ti-file btn-icon-prepend"></i>
+                    Edit
+                  </button>
+                  <button
+                    (click)="deleteProduct(p.productId)"
+                    style="margin-left: 10px"
+                    type="button"
+                    class="btn btn-outline-primary btn-icon-text"
+                  >
+                    Delete
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
+      </div>
     </div>
+  </div>
+  <div class="mt-3 mt-lg-0 col-lg-4">
+    <div class="card">
+      <div class="card-body">
+        <div
+          style="display: flex; justify-content: space-between"
+          class="w-100"
+        >
+          <h4 class="card-title">Table Category</h4>
+          <button type="button" class="btn btn-inverse-primary btn-fw">
+            Add Category
+          </button>
+        </div>
+        <p class="card-description">DbClick category để lọc sản phẩm</p>
+        <div class="table-responsive">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>Category Name</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr
+                class="tr-category"
+                *ngFor="let c of categories; let i = index"
+                (dblclick)="selectedCategory(c.categoryId, i + 1)"
+                [ngClass]="isActiveCatogory === c.categoryId ? 'active' : ''"
+              >
+                <td>{{ c.categoryName }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <button
+          style="margin-top: 10px"
+          (click)="clearSelectedCategory()"
+          type="button"
+          class="btn btn-inverse-primary btn-fw"
+        >
+          Delete Selected
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
 <div class="container-form-product" *ngIf="isPopupVisible">
-    <app-form-product (isSubmit)="outputAction($event)" [id]="productIdActive" class="w-50"></app-form-product>
+  <app-form-product
+    (isSubmit)="outputAction($event)"
+    [id]="productIdActive"
+    class="w-50"
+  ></app-form-product>
 </div>
