--- a/Angular/Orenda-Ecommerce/src/app/layouts/sidebar/sidebar.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/layouts/sidebar/sidebar.component.html
@@ -127,5 +127,12 @@
         <span class="menu-title">Product-page</span>
       </a>
     </li>
+    <li class="nav-item">
+      <a href="javascript:void(0)" (click)="switchPage('profile')" [class.active]="currenPage === 'profile'"
+        class="nav-link">
+        <i class="icon-paper menu-icon"></i>
+        <span class="menu-title">Profile-page</span>
+      </a>
+    </li>
   </ul>
 </nav>
