--- a/Angular/Orenda-Ecommerce/src/app/pages/login/login.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/pages/login/login.component.html
@@ -1,35 +1,46 @@
-<div class="container-login">
-  <div class="card">
-    <div class="card-body">
-      <h2 class="card-title">Login form</h2>
-      <p class="card-description text-danger" *ngIf="errorMessage">
-        {{ errorMessage }}
-      </p>
-      <div class="forms-sample">
-        <div class="form-group">
-          <label for="exampleInputName1">Username</label>
-          <input
-            type="text"
-            id="username"
-            [(ngModel)]="username"
-            name="username"
-            class="form-control"
-          />
+<div class="container-scroller">
+  <div class="container-fluid page-body-wrapper full-page-wrapper">
+    <div class="content-wrapper d-flex align-items-center auth px-0">
+      <div class="row w-100 mx-0">
+        <div class="col-lg-4 mx-auto">
+          <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+            <div class="brand-logo">
+              <img src="../../../assets/themes/images/logo.svg" alt="logo">
+            </div>
+            <h4>Hello! let's get started</h4>
+            <h6 class="font-weight-light">Sign in to continue.</h6>
+            <form class="pt-3">
+              <div class="form-group">
+                <input type="text" id="username" [(ngModel)]="username" name="username" class="form-control" />
+              </div>
+              <div class="form-group">
+                <input type="password" id="password" [(ngModel)]="password" name="password" class="form-control" />
+              </div>
+              <div class="mt-3">
+                <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="javascript:void(0)"
+                  (click)="submitlogin()">SIGN IN</a>
+              </div>
+              <div class="my-2 d-flex justify-content-between align-items-center">
+                <div class="form-check">
+                  <!-- <label class="form-check-label text-muted">
+                    <input type="checkbox" class="form-check-input">
+                    Keep me signed in
+                  </label> -->
+                </div>
+                <a href="javascript:void(0)" class="auth-link text-black">Forgot password?</a>
+              </div>
+              <div class="mb-2">
+                <button disabled type="button" class="btn btn-block btn-facebook auth-form-btn">
+                  <i class="ti-facebook mr-2"></i>Connect using facebook
+                </button>
+              </div>
+              <div class="text-center mt-4 font-weight-light">
+                Don't have an account? <a href="javascript:void(0)" class="text-primary">Create</a>
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="form-group">
-          <label for="exampleInputEmail3">Password</label>
-          <input
-            type="password"
-            id="password"
-            [(ngModel)]="password"
-            name="password"
-            class="form-control"
-          />
-        </div>
-        <button (click)="submitlogin()" type="" class="btn btn-primary mr-2">
-          Submit
-        </button>
       </div>
     </div>
+    <!-- content-wrapper ends -->
   </div>
-</div>
