--- a/Angular/Orenda-Ecommerce/src/app/pages/profile-page/profile-page.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/pages/profile-page/profile-page.component.html
@@ -29,8 +29,7 @@
                 <div class="card-body">
                     <form (ngSubmit)="onSubmitUpdateInfo()">
                         <div class="mb-3">
-                            <label class="small mb-1" for="inputUsername">Username (how your name will appear to other
-                                users on the site)</label>
+                            <label class="small mb-1" for="inputUsername">Username</label>
                             <input class="form-control" id="inputUsername" name="userName"
                                 [(ngModel)]="infoUser.userName" type="text" placeholder="Enter your username">
                         </div>
