--- a/Angular/Orenda-Ecommerce/src/app/layouts/layouts.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/layouts/layouts.component.html
@@ -15,4 +15,4 @@
     </div>
   </div>
 </div>
-<app-loading [isLoading]="(isLoading$ | async) ?? false"></app-loading>
+<!-- <app-loading [isLoading]="(isLoading$ | async) ?? false"></app-loading> -->
