--- a/Angular/Orenda-Ecommerce/src/app/pages/profile-page/profile-page.component.scss
+++ b/Angular/Orenda-Ecommerce/src/app/pages/profile-page/profile-page.component.scss
@@ -54,3 +54,18 @@
   margin-left: 1rem;
   margin-right: 1rem;
 }
+
+.container-form-address {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 20;
+  background-color: rgba(27, 22, 22, 0.3);
+}
