phần form profile

--- a/Angular/Orenda-Ecommerce/src/app/layouts/layouts.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/layouts/layouts.component.html
@@ -1,23 +1,11 @@
-<!-- <app-login
-  *ngIf="!isLoginSucces"
-  (isSucces)="handleLoginSuccess($event)"
-></app-login> -->
-<div *ngIf="isLoginSucces" class="container-scroller">
-  <app-header (isLogOut)="isLoginSucces = !$event"></app-header>
+<div class="container-scroller">
+  <app-header></app-header>
   <div class="container-fluid page-body-wrapper">
     <app-sidebar-skins></app-sidebar-skins>
-    <app-sidebar
-      [currenPage]="currenPage"
-      (checkedChangePage)="currenPage = $event"
-      class="sidebar sidebar-offcanvas"
-      id="sidebar"
-    ></app-sidebar>
+    <app-sidebar class="sidebar sidebar-offcanvas" id="sidebar"></app-sidebar>
     <div class="main-panel">
       <div class="content-wrapper">
         <router-outlet></router-outlet>
-        <!-- <app-dashboard *ngIf="currenPage === 'dashboard'"></app-dashboard>
-        <app-product-page *ngIf="currenPage === 'product'"></app-product-page>
-        <app-profile-page *ngIf="currenPage === 'profile'"></app-profile-page> -->
       </div>
       <app-footer></app-footer>
     </div>
