--- a/Angular/Orenda-Ecommerce/src/app/layouts/sidebar/sidebar.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/layouts/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
       <div class="collapse" id="ui-basic">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item">
-            <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a>
+            <a class="nav-link" outerLink="/dashboard">Buttons</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a>
@@ -120,6 +120,12 @@
         </ul>
       </div>
     </li> -->
+    <li class="nav-item">
+      <a routerLink="/manage-address" class="nav-link">
+        <i class="icon-paper menu-icon"></i>
+        <span class="menu-title">Manage-address</span>
+      </a>
+    </li>
     <li class="nav-item">
       <a routerLink="/product" (click)="switchPage('product')" [class.active]="currenPage === 'product'"
         class="nav-link">
