--- a/Angular/Orenda-Ecommerce/src/app/pages/manage-address/address-info/address-info.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/pages/manage-address/address-info/address-info.component.html
@@ -1,14 +1,18 @@
 <div class="card">
   <div class="card-body">
-    <h4 class="card-title">{{ lAddress.title }}</h4>
-    <!-- <p class="card-description">Add class <code>.table</code></p> -->
+    <div class="w-100 d-flex align-items-center justify-content-between">
+      <h4 class="card-title">{{ lAddress.title }}</h4>
+      <!-- (click)="updateOrCreateAddress()" -->
+      <button style="margin-left: 10px;" type="button" class="btn btn-primary">Create</button>
+    </div>
+    <p class="card-description">Dbclick từng dòng để xem chi tiết</p>
     <ng-container *ngIf="list.length > 0">
       <div class="table-responsive">
         <ng-container *ngIf="lAddress.currentType === 'Province'">
           <table class="table">
             <thead>
               <tr>
-                <th>Cap</th>
+                <th>Level</th>
                 <th>Province Name</th>
                 <th>Province Code</th>
                 <th>Status</th>
@@ -17,15 +21,16 @@
             </thead>
             <tbody>
               <ng-container *ngIf="lAddress && lAddress.items">
-                <tr
-                  *ngFor="let add of list; let i = index"
-                  (dblclick)="selectedAddress(add)"
-                >
+                <tr *ngFor="let add of list; let i = index" (dblclick)="selectedAddress(add)">
                   <td>{{ add.cap }}</td>
                   <td>{{ add.provinceName }}</td>
                   <td>{{ add.provinceCode }}</td>
                   <td>{{ add.isActive }}</td>
-                  <td></td>
+                  <td>
+                    <button (click)="updateOrCreateAddress(add)" style="margin-right: 10px;" type="button"
+                      class="btn btn-primary">Update</button>
+                    <button (click)='deleteAddress(add.id)' type="button" class="btn btn-danger">Delete</button>
+                  </td>
                 </tr>
               </ng-container>
             </tbody>
@@ -36,7 +41,7 @@
           <table class="table">
             <thead>
               <tr>
-                <th>Cap</th>
+                <th>Level</th>
                 <th>District Name</th>
                 <th>District Code</th>
                 <th>Province Code</th>
@@ -46,16 +51,17 @@
             </thead>
             <tbody>
               <ng-container *ngIf="lAddress && lAddress.items">
-                <tr
-                  *ngFor="let add of list; let i = index"
-                  (dblclick)="selectedAddress(add)"
-                >
+                <tr *ngFor="let add of list; let i = index" (dblclick)="selectedAddress(add)">
                   <td>{{ add.cap }}</td>
                   <td>{{ add.districtName }}</td>
                   <td>{{ add.districtCode }}</td>
                   <td>{{ add.provinceCode }}</td>
                   <td>{{ add.isActive }}</td>
-                  <td></td>
+                  <td>
+                    <button (click)="updateOrCreateAddress(add!)" style="margin-right: 10px;" type="button"
+                      class="btn btn-primary">Update</button>
+                    <button (click)='deleteAddress(add.id)' type="button" class="btn btn-danger">Delete</button>
+                  </td>
                 </tr>
               </ng-container>
             </tbody>
@@ -66,7 +72,7 @@
           <table class="table">
             <thead>
               <tr>
-                <th>Cap</th>
+                <th>Level</th>
                 <th>Ward Name</th>
                 <th>Ward Code</th>
                 <th>District Code</th>
@@ -77,17 +83,18 @@
             </thead>
             <tbody>
               <ng-container *ngIf="lAddress && lAddress.items">
-                <tr
-                  *ngFor="let add of list; let i = index"
-                  (dblclick)="selectedAddress(add)"
-                >
+                <tr *ngFor="let add of list; let i = index" (dblclick)="selectedAddress(add)">
                   <td>{{ add.cap }}</td>
                   <td>{{ add.wardName }}</td>
                   <td>{{ add.wardCode }}</td>
                   <td>{{ add.districtCode }}</td>
                   <td>{{ add.provinceCode }}</td>
                   <td>{{ add.isActive }}</td>
-                  <td></td>
+                  <td>
+                    <button (click)="updateOrCreateAddress(add!)" style="margin-right: 10px;" type="button"
+                      class="btn btn-primary">Update</button>
+                    <button (click)='deleteAddress(add.id)' type="button" class="btn btn-danger">Delete</button>
+                  </td>
                 </tr>
               </ng-container>
             </tbody>
@@ -127,4 +134,8 @@
       </div>
     </ng-container> -->
   </div>
+</div>
+<div class="container-form-overlay" *ngIf="isShowOrHiddenForm">
+  <app-form-create-update-address class="w-50" #child [model]="currentModel"
+    (isActionForm)="listenStatusForm($event)"></app-form-create-update-address>
 </div>
